[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptolab"
version = "0.1.0"
description = "CLI tool for classical ciphering, deciphering, and cryptanalysis"
authors = [
    { name = "Raphael Giordano", email = "crypto.giordano@proton.me" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

dependencies = [
    "typer[all]"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]

[project.scripts]
cryptolab = "cryptolab.cli.main:app"

# this file was essentially written by an AI